# SnapInsight

./: .gitignore  LICENSE  README.md
.cursor/rules/: assistant-agreement.mdc  implementation-workflow.mdc  python-venv-workflow.mdc
companion/: mac_app.py  pyproject.toml
companion/scripts/: build_macos_app.py
companion/src/snapinsight_companion/: __init__.py  app.py  config.py  logging.py  login_item.py  main.py  menu.py  paths.py  process_manager.py  status_checks.py
docs/: README.md
docs/design/: extension-and-local-service-design.md  repository-and-code-structure.md
docs/discovery/: extension-local-service-approval-blockers.md  extension-local-service-design-review-questions.md  extension-local-service-doc-alignment.md  extension-origin-validation-runtime-question.md  (+5 more)
extension/: options.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.content.config.ts
server/: pyproject.toml
server/app/: __init__.py  main.py
server/app/adapters/: __init__.py  ollama_client.py
server/app/api/: __init__.py  explanations.py  health.py  models.py
server/app/core/: config.py  errors.py  logging.py  origin_validation.py
server/app/schemas/: __init__.py  error_schema.py  explanation_schema.py  health_schema.py  model_schema.py  stream_event_schema.py
server/app/services/: __init__.py  explanation_service.py  health_service.py  model_catalog_service.py
server/tests/integration/: test_explanations_stream.py  test_health_models.py
server/tests/unit/: test_explanation_service.py  test_ollama_client.py  test_origin_validation.py
(+81 files in other folders)
